--- a/src/static/main.css
+++ b/src/static/main.css
@@ -24,8 +24,8 @@
 }
 
 :root {
-    --first: gray;
-    --second: #CC2936;
+    --first: #CC2936;
+    --second: #FFAD05;
     --third: #2991BD;
     --forth: #23CE6B;
     --ninth: #F4E4BA;
