--- a/src/static/main.css
+++ b/src/static/main.css
@@ -194,7 +194,7 @@ input {
 }
 
 #status {
-    /* display: none; */
+    color: red;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
