--- a/src/static/main.css
+++ b/src/static/main.css
@@ -33,6 +33,7 @@
     --third: #23CE6B;
     --forth: #2991BD;
     --ninth: #F4E4BA;
+    --gray: gray;
 }
 
 * {
@@ -98,7 +99,7 @@ border-radius: 0 0 0.5em 0.5em;
      font-size: 13pt;
     position: absolute;
     right: 4px;
-    background: var(--background-area);
+
     border:none;
     border-radius: 0;
 }
@@ -423,11 +424,11 @@ button {
     padding-bottom: 90px;
     font-size: 16px;
     font-family: 'Noto Sans Mono', monospace;
-    color: gray;
+    color: var(--gray);
 }
 
 .bottom a {
-    color: gray;
+    color: var(--gray);
 }
 
 
@@ -558,9 +559,10 @@ label.readylabel {
 }
 
 .calendar3 {
-    background: var(--background-table);
+    background: var(--background-main);
     width: 100%;
     text-align: center;
+    margin-bottom: 0.5em;
 }
 
 .calendar3 thead tr:last-child {
@@ -590,13 +592,13 @@ label.readylabel {
 
 .calendar3 button.calendarblock.today {
     /* background: var(--third); */
-    border-color: gray;
+    border-color: var(--gray);
 
 }
 
 .calendarblock {
-    border: 2px solid var(--background-table);
-    margin: -2x;
+    border: 2px solid transparent;
+    margin: 2px;
     /* color: whitesmoke; */
     /* background-color: transparent; */
     border-radius: 0;
@@ -606,7 +608,7 @@ label.readylabel {
 
 .rank {
     font-size: 10.8pt;
-    color: gray;
+    color: var(--gray);
 }
 
 .time {
@@ -615,7 +617,7 @@ label.readylabel {
     padding-left: 2px;
     padding-right: 2px;
     color: white;
-    color: gray;
+    color: var(--gray);
     font-size: 11.4pt;
     font-family: 'Noto Sans Mono', monospace;
     text-align: left;
@@ -757,13 +759,13 @@ label.readylabel {
 
 .header {
     font-family: 'Noto Sans Mono', monospace;
-    padding-left: 10px;
+    /* padding-left: 10px;
     padding-top: 5px;
     padding-bottom: 5px;
-    padding-right: 10px;
+    padding-right: 10px; */
     text-align: left;
     font-size: 12pt;
-    color: gray;
+    color: var(--gray);
     /* display: none; */
 }
 
@@ -771,6 +773,8 @@ label.readylabel {
     background: var(--background-table);
     text-align: center;
     text-transform: uppercase;
+    position: sticky;
+    top:27px;
 }
 
 .textareacontainer {
@@ -808,6 +812,7 @@ label.readylabel {
     color: var(--color-main);
     border: none;
     padding: 5px;
+    background-color: var(--background-area);
 }
 
 .focused {
@@ -837,7 +842,7 @@ td.focushead {
 }
 
 .focustimer div {
-    color: gray;
+    color: var(--gray);
     font-size: 11.4pt;
 }
 
@@ -899,6 +904,24 @@ width: 5em;
 height: calc(100% - 17px);
 margin-right: 9px;
 font-family: 'Noto Sans Mono', monospace;
-color: gray;
+color: var(--gray);
 font-size: 11.4pt;
+}
+
+.dipheader{
+text-align: left;
+background: none;
+}
+
+.dipheader span{
+ margin-left: 0.5em; 
+    /* margin-top:0.5em; */
+color:var(--gray);
+text-align: center;
+display: inline-block;
+background: var(--background-table);
+background: var(--old);
+color:var(--color-main);
+
+width: 3.5em;
 }
