--- a/src/static/main.css
+++ b/src/static/main.css
@@ -51,12 +51,19 @@ body {
     font-family: 'IBM Plex Sans', sans-serif;
     margin: 0;
     overflow-x: hidden;
-    background-color: var(--background-main);
+ background-color: var(--background-main);
+   
+}
+#staticbackground{
+    width: 100%;
+height: 100%;
+z-index: -1;
+    position: fixed;
+ background-color: var(--background-main);
  background-image: var(--background-image);
   background-attachment: fixed;
       background-size: cover;
 }
-
 div {
     color: var(--color-main);
     font-family: 'IBM Plex Sans', sans-serif;
@@ -82,7 +89,7 @@ border-radius: 0 0 0.5em 0.5em;
 }
 
 #tasks {
-    margin-top: 27px;
+    padding-top: 27px;
 }
 
 .search {
