--- a/src/static/main.css
+++ b/src/static/main.css
@@ -64,6 +64,7 @@ z-index: -1;
   background-attachment: fixed;
       background-size: cover;
 }
+
 div {
     color: var(--color-main);
     font-family: 'IBM Plex Sans', sans-serif;
@@ -929,6 +930,10 @@ display: inline-block;
 background: var(--background-table);
 background: var(--old);
 color:var(--color-main);
-
 width: 3.5em;
+}
+
+.slapbutton{
+margin-bottom: 0.5em;
+background: var(--background-table);
 }
