absolute  input trick

--- a/src/static/main.css
+++ b/src/static/main.css
@@ -714,6 +714,7 @@ label.readylabel {
     padding-right: 0;
     box-sizing: border-box;
     width: 4em;
+    position: absolute;
 }
 
 #newtaskbutton {
