--- a/src/static/main.css
+++ b/src/static/main.css
@@ -372,7 +372,7 @@ option.fifth {
 button {
     background: none;
     background-color: none;
-    font-size: 12pt;
+    font-size: 11pt;
     border-radius: 10px;
     padding: 0;
     font-family: 'IBM Plex Sans', sans-serif;
@@ -511,7 +511,7 @@ label.mainbutton.timebutton {
 }
 
 .mainbutton {
-    font-size: 12pt;
+    font-size: 11pt;
     box-sizing: border-box;
     margin: 0;
     border: 4px solid var(--background-table);
@@ -940,4 +940,9 @@ font-size: 19pt; */
     color: var(--color-main);
     margin-bottom: 0.5em;
     background: var(--background-table);
+}
+
+.dipbutton {
+    min-width: 4pt;
+    width: 10%;
 }
