--- a/arrowclient/index.css
+++ b/arrowclient/index.css
@@ -17,7 +17,10 @@
 html {
   font-size: 16px;
 }
-
+body {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
 * {
   font-family: "IBM Plex Sans", sans-serif;
 }
