--- a/arrowclient/index.css
+++ b/arrowclient/index.css
@@ -98,3 +98,17 @@ input {
   background-position: top left;
   border-top-left-radius: 0;
 }
+
+.bg-diagonal-stripes {
+  background-image: linear-gradient(
+    135deg,
+    rgba(255, 200, 200, 0.1) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 200, 200, 0.1) 50%,
+    rgba(255, 200, 200, 0.1) 75%,
+    transparent 75%,
+    transparent
+  );
+  background-size: 60px 60px;
+}
