--- a/arrowclient/index.css
+++ b/arrowclient/index.css
@@ -17,6 +17,22 @@
   }
 }
 
+@layer utilities {
+  .bg-diagonal-stripes-dark {
+    background-image: linear-gradient(
+      135deg,
+      rgba(255, 0, 0, 0.07) 25%,
+      /* Красный цвет с большей прозрачностью */ transparent 25%,
+      transparent 50%,
+      rgba(255, 0, 0, 0.07) 50%,
+      /* Красный цвет с большей прозрачностью */ rgba(255, 0, 0, 0.07) 75%,
+      transparent 75%,
+      transparent
+    );
+    background-size: 60px 60px;
+  }
+}
+
 * {
   font-family: "Open Sans", sans-serif;
 }
