--- a/arrowclient/index.css
+++ b/arrowclient/index.css
@@ -71,7 +71,8 @@ input:checked + .checkmark::after {
 }
 
 #edit div:first-child {
-  @apply pb-2;
+  font-size: 1.5rem;
+  @apply pb-4;
   @apply text-center;
 }
 
