--- a/arrowclient/index.css
+++ b/arrowclient/index.css
@@ -13,7 +13,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background-image: url("back_dark.jpg");
-    --plus-image: url("img/plusdark.png");
+    --plus-image: url("img/plus_dark.png");
   }
 }
 * {
@@ -101,7 +101,7 @@ input:checked + .checkmark::after {
 }
 
 .corner-box-bottom-right {
-  background-image: linear-gradient(to bottom right, transparent 50%, gray 50%);
+  background-image: linear-gradient(to bottom right, transparent 50%, #6b7280 50%);
   background-repeat: no-repeat;
   background-size: 0.5em 0.5em;
   background-position: bottom right;
@@ -109,7 +109,7 @@ input:checked + .checkmark::after {
 }
 
 .corner-box-top-left {
-  background-image: linear-gradient(to top left, transparent 50%, gray 50%);
+  background-image: linear-gradient(to top left, transparent 50%, #6b7280 50%);
   background-repeat: no-repeat;
   background-size: 0.5em 0.5em;
   background-position: top left;
